遠藤のプロフィールを修正

--- a/jsample.tex
+++ b/jsample.tex
@@ -134,9 +134,8 @@ SIAM (1998).
 \end{thebibliography}
 
 \begin{biography}
-\profile{m,E}{情報 太郎}{1970年生．1992年情報処理大学理学部情報科学科卒業．
-1994年同大学大学院修士課程修了．同年情報処理学会入社．オンライン出版の研究
-に従事．電子情報通信学会，IEEE，ACM 各会員．}
+\profile{n}{遠藤 勝也}{1992年生．2016年明星大学情報学部情報科学科卒業．
+2018年株式会社スタジオ・アルカナ入社．ウェブサービス開発に従事．芸術科学会会員．}
 %
 \profile{n}{処理 花子}{1960年生．1982年情報処理大学理学部情報科学科卒業．
 1984年同大学大学院修士課程修了．1987年同博士課程修了．理学博士．1987年情報処
