武富に変更

--- a/jsample.tex
+++ b/jsample.tex
@@ -146,7 +146,7 @@ SIAM (1998).
 \profile{n}{遠藤 勝也}{1992年生．2016年明星大学情報学部情報科学科卒業．
 2018年株式会社スタジオ・アルカナ入社．ウェブサービス開発に従事．芸術科学会会員．}
 %
-\profile{n}{処理 花子}{1960年生．1982年情報処理大学理学部情報科学科卒業．
+\profile{n}{武富 拓也}{1960年生．1982年情報処理大学理学部情報科学科卒業．
 1984年同大学大学院修士課程修了．1987年同博士課程修了．理学博士．1987年情報処
 理大学助手．1992年架空大学助教授．1997年同大教授．オンライン出版の研究
 に従事．2010年情報処理記念賞受賞．電子情報通信学会，IEEE，IEEE-CS，ACM
