--- a/jsample.tex
+++ b/jsample.tex
@@ -143,14 +143,11 @@ SIAM (1998).
 \end{thebibliography}
 
 \begin{biography}
-\profile{n}{遠藤 勝也}{1992年生．2016年明星大学情報学部情報科学科卒業．
+\profile{n}{遠藤 勝也}{1992年生．2016年明星大学情報学部情報学科卒業．
 2018年株式会社スタジオ・アルカナ入社．ウェブサービス開発に従事．芸術科学会会員．}
 %
-\profile{n}{武富 拓也}{1960年生．1982年情報処理大学理学部情報科学科卒業．
-1984年同大学大学院修士課程修了．1987年同博士課程修了．理学博士．1987年情報処
-理大学助手．1992年架空大学助教授．1997年同大教授．オンライン出版の研究
-に従事．2010年情報処理記念賞受賞．電子情報通信学会，IEEE，IEEE-CS，ACM
-各会員．}
+\profile{n}{武富 拓也}{1990年生．2016年明星大学人文部国際コミュニケーション学科卒業．
+2019年明星大学情報学部実習指導員として勤務, 明星大学大学院情報学研究科情報学専攻博士前期課程(研究生). 社会言語科学会会員}
 %
 \profile{h,L}{学会 次郎}{1950年生．1974年架空大学大学院修士課程修了．
 1987年同博士課程修了．工学博士．1977年架空大学助手．1992年情報処理大学助
