スタイルを更新

--- a/jsample.tex
+++ b/jsample.tex
@@ -1,5 +1,4 @@
-
-\documentclass[submit]{ipsj}
+\documentclass[submit,techrep]{ipsj}
 % \documentclass{ipsj}
 
 \usepackage{graphicx}
@@ -13,15 +12,11 @@
 \setcounter{号数}{1}
 \setcounter{page}{1}
 
-
-\受付{2016}{3}{4}
-\再受付{2015}{7}{16}   %省略可能
-\再再受付{2015}{7}{20} %省略可能
-\再再受付{2015}{11}{20} %省略可能
-\採録{2016}{8}{1}
-
-
-
+% \受付{2016}{3}{4}
+% \再受付{2015}{7}{16}   %省略可能
+% \再再受付{2015}{7}{20} %省略可能
+% \再再受付{2015}{11}{20} %省略可能
+% \採録{2016}{8}{1}
 
 \begin{document}
 
