--- a/jsample.tex
+++ b/jsample.tex
@@ -37,11 +37,8 @@ Department of Computer Science, Graduate School of Systems and Information Engin
 \author{尼岡 利崇}{Toshitaka Amaoka}{Meisei}
 
 \begin{abstract}
-本研究では，アプリケーション開発における異なる実践共同体の参加の過程を可視化するシステムを開発した．
-現在のCSCW(Computer Supported Cooperative Work)研究では，アプリケーションを使用場面やコンテクストに基づいて分析する研究は行われているが，利用者のコミュニケーションとアプリケーション開発の過程を紐付けて分析する研究はまだ少ない．
-また，著者らは過去に質的アプローチの観点から実践共同体の概念を用いて，異なる背景を持つプロジェクトメンバーの関係のあり方が，開発されるアプリケーションにどのような影響を及ぼすかという研究を行った．
-その結果，プロジェクトメンバーの関係構築の在り方が分業的関係か協働的関係かに応じて，各プロジェクトメンバーが所有する知識や技術といったリソースが人間関係のあり方に相応して，開発されたアプリケーションのデザインに現れることを示唆していた．
-そこで，本研究では質的アプローチの分析で得た研究結果をもとに，アプリケーション開発の過程における，背景の異なるプロジェクトメンバーの関わり方を可視化するシステムの開発を行った．
+  本研究では，アプリケーション開発における異なる実践共同体の参加の過程を可視化するシステムを開発した．
+著者らは過去に質的アプローチの観点から実践共同体(Community of Practice以下，CoP)の概念を用いて，異なる背景を持つプロジェクトメンバーの関係のあり方が，開発されるアプリケーションにどのような影響を及ぼすかという研究を行った．その研究結果をもとにCSCW(Computer Supported Cooperative Work)の観点から，アプリケーション開発の過程における，背景の異なるプロジェクトメンバーの関わり方を可視化するシステムの開発を行った．本システムを使用することにより，異なる背景を持つメンバーが参加するアプリ開発チームにおいて，アプリのデザインをメンバー間の関係構築のあり方からデザインを考えることを支援することを目的としている．
 \end{abstract}
 
 
@@ -66,8 +63,13 @@ IPSJ Journal, \LaTeX, style files, ``Dos and Don'ts'' list
 %1
 \section{はじめに}
 
-グローバル化のもとで社会は複雑化し，ICTの進歩はめざましく，様々な業種や分野でソフトウェア・アプリケーションがなくてはならないものとなっている．現在のソフトウェア・アプリケーション(以下，アプリ)の開発は，プログラマーのみで完結することは少なく，多様な背景を持つメンバーと協働で開発が行われる．共同開発では様々なICTツールが導入され，アプリの開発環境それ自体も変化している．
-CoPとは，成員の学習の促進あるいは知識を共有・創造といったある一定のテーマや目的のもとに構築された共同体である[1]．CoPの概念を用いた研究について，学習という側面に関しての多くの研究で効果が指摘されているが，異なるCoPの関係構築のあり方と開発されるアプリへの影響と変化を扱う研究は著者が知る限り少ない．しかし，上野[2]が示すように人工物は，様々な組織間やコミュニティ間の調停，交渉の産物として形成されるなど，CoPを用いた分析は学習以外にも焦点を向ける有用性があると考えられる.
+グローバル化のもとで社会は複雑化し，ICTの進歩はめざましく，様々な業種や分野でソフトウェア・アプリケーションがなくてはならないものとなっている．現在のソフトウェア・アプリケーション(以下，アプリ)の開発は，プログラマーのみで完結することは少なく，多様な背景を持つメンバーと協働で開発が行われる．また共同開発では様々なICTツールが導入され，アプリの開発環境それ自体も変化している．
+　本研究は，過去に行った異なる背景を持つプロジェクトメンバーの関係構築のあり方が，開発されるアプリケーションのデザインにどのような影響を及ぼすかという研究の結果に基に行われたものである．過去研究の結果をもとにCSCW(Computer Supported Cooperative Work)の観点からアプリケーション開発の過程における，背景の異なるプロジェクトメンバーの関わり方を可視化するシステムの開発を行った．
+　過去研究は，情報学部情報学科と人文学部国際関係学科が学部横断で行ったPBL(Project Based Learning)型授業を対象に分析が行われた．観察対象のPBL型授業のテーマは，「地域観光を促進するアプリの開発」である．
+
+
+CoPとは，成員の学習の促進あるいは知識を共有・創造といったある一定のテーマや目的のもとに構築された共同体である[1]．
+CoPの概念を用いた研究について，学習という側面に関しての多くの研究で効果が指摘されているが，異なるCoPの関係構築のあり方と開発されるアプリへの影響と変化を扱う研究は著者が知る限り少ない．しかし，上野[2]が示すように人工物は，様々な組織間やコミュニティ間の調停，交渉の産物として形成されるなど，CoPを用いた分析は学習以外にも焦点を向ける有用性があると考えられる.
 　CSCW(computer supported cooperative work)では，人工物であるテクノロジーを使用場面やコンテクストに基づいて分析する研究は行われているが，コミュニケーションとアプリ開発の過程を紐付けて分析する研究はまだ少ない．著者が過去行なってきた研究ではプロジェクトメンバーの関係構築の在り方が分業的関係か協働的関係に応じて、各プロジェクトメンバーが所有する知識や技術といったリソースがその人間関係のあり方に相応して配置され、アプリのデザインに現れることを確認した[3]．
 本研究が対象とするPBL型授業でのアプリ開発は，ソフトウェアの開発手法の1つであるアジャイル開発が採用されている．アジャイル開発とは機能単位の小さなサイクルで，設計・開発・テストの工程を繰り返すことにより，様々な状況の変化に対応しながら開発を進めていく手法である[参考文献]．状況の変化に対応するため，日毎にdaily scrumと呼ばれる短い時間での進捗の共有と反省を行う打ち合わせの時間が設けられている．導入するアプリ開発支援ソフトウェアはdaily scrumに活用されることが想定される．具体的には下記の流れを想定している．アプリ開発支援ソフトウェアは，アプリ開発に関わるタスクがどの学部(どのCoPに属しているか)の学生によって対応されたかというTrello上のデータからメンバー間の関係をグラフ構造として可視化する．その情報をもとに，アプリ開発者はタスクの質を機能中心で考えるのではなく，プロジェクトメンバーの関係性からも把握できるようになる．結果的に，開発されるアプリの機能やUIは，技術や機能中心に決定されるのではなく，プロジェクトメンバーが持つリソースを十分に利用できるような関係性から考えられるようになることを想定している．
 
