--- a/jsample.tex
+++ b/jsample.tex
@@ -76,10 +76,20 @@ IPSJ Journal, \LaTeX, style files, ``Dos and Don'ts'' list
 \section{先行研究}
 \label{previous-research}
 
-人文学部国際関係学科(以下，学科)と情報学部情報学科は，目的とす る専門性や実践の違いから異なるCoPであると考えられる.研究対象のプロジェクト授業に参 加する国コミ学科の学生は英語でのプレゼンテーションが主な実践であり，情報学科の学生は プログラミングやアプリ開発が主な実践となる.  アプリ開発のプロセスにおいて，当然ながらアプリの実装が完了した後で，英語でのプレゼ ンテーションという順番になるため，両学科の学生が積極的に参加するタイミングは時期に よって齟齬がおきる.加えて，国コミ学科はアプリ開発に携わった経験があるものはまれなた め，プロジェクト前半ではアプリ開発におけるコミュニケーションは積極的に意見を出すとい うよりも，観察を主とした参加の態度になる.これはCoPでいう正当的周辺参加と言い換える ことができる.他方，情報学科は技術それ自体が主な実践のため，成果発表よりも技術のそれ 自体に価値を見出す傾向が見られる.  上記のように，両学科の学生が重きを置く実践(あるいは専門)の違いが，プロジェクトに積 極的に参加する時期のずれを生み出す.その結果，言葉の解釈の違い，プロジェクトにおける 時間感覚のずれなどのディスコミュニケーションを引き起こす.  またプロジェクトに参加する態度として，自分の専門性に関わるタスクしか関心を向けない という態度は分業的なタスクの割り振りを引き起こし，このこともまたディスコミュニケー ションを引き起こす原因となる.他方，自分の専門を超えて，両学科が一緒に作業をする時間 を設けることで，アプリ開発の過程やプレゼンテーション資料作成の過程に協働で関与する中 で，言葉の意味の交渉や目的の共有が行われ，人工物のデザインに異なる専門の知識や技術的 なリソースが影響する.これはCoPでいう布置として扱われる.上記のように分業的，あるい は協働的といった関係のあり方がそれ自体が人工物の機能やUIに影響を及ぼすのではないかと いう示唆を得ている.
+本研究は，道具やテクノロジーの開発によって人々の協調的作業を支援するシステムの開発を目標としたCSCWの観点から[?]，アプリケーション開発における異なる実践共同体の参加の過程を可視化するシステムを開発したものである．CSCWの発展はエスノメソドロジーに依拠したL.サッチマンの影響を大きく受けている言える．サッチマンは人々が社会生活を営むために用いる「やり方」[?]を分析することを目的をするエスノメソドロジーの手法により，人間の行動は状況依存的に組織されていることを主張した[?].このような社会の行為を状況との関わりの中で分析する研究は，サッチマン以外にもE.ウェンガーが主張する実践共同体[?]の理論や，日本では，上野直樹を中心とした状況論の研究が行われている[?]．
+
+CSCWへの研究の発展に大きな貢献をしたサッチマンであったが，同時に異分野横断的研究について，組織上の困難さを抱えていた[?]．その苦悩とは，異なる専門性にかかわる分業的な関係のあり方，つまり，情報学研究とエスノメソドロジーの知識産出のプロセスや前提とする認識論のズレも関係していたと考えられる[?]．このような異なる背景を有するコミュニティのメンバー同士がコミュニケーションを行う場合，異分野横断的研究に関わらず，企業の部門間でも認識論の違いから主張の食い違いや対立が起きることもある[?]．
+
+　上記のような異なる専門性や背景をもつメンバー同士の関係についてどのように実践が行われているかの分析を行うには，実践共同体の概念を用いることが有効であると考える．
+実践共同体とは，成員の学習の促進あるいは知識を共有・創造といったある一定のテーマや目的のもとに構築された共同体である[?].実践共同体には，正統的周辺参加，ディスコース，布置といった概念を含んでいる．正統的周辺参加とは，成員がある実践共同体に加わり，技能の獲得と成員のアイデンティティの発達を達成していくその軌跡(Trajectory)を表す概念である．ディスコースとは，実践共同体に共有される話し手のミクロな会話からマクロな価値観まで含む文化のことを意味する．布置とは，成員は単一の実践共同体のみに参加するものではなく，複数の実践共同体の参加することから，複数の実践共同体に参加しその関係を捉える概念である．
+
+　実践共同体の概念を用いた研究について，学習という側面に関し ての多くの研究で効果が指摘されているが，異なるCoPの関係構築のあり方と開発されるアプリへの影響と変化を扱う研究は著者が知る限り少ない.しかし，上野[2]が示すように人工物は，様々な組織間やコミュニティ間の調停，交渉の産物として形成されており，人工物のデザインとはコミュニティのデザインであると述べているように，実践共同体の概念を用いた分析は学習以外にも焦点を向ける有用性があると考えられる．そのため，異なる背景を持つメンバー同士の関係のあり方を実践共同体の概念から分析し，生み出される人工物のデザインー本研究ではアプリのデザインーを紐付けるプロセスは有効であると考える．
 
 
-3. アプリ開発支援ソフトウェアに関して  本研究が対象とする授業は，両学科が自ら主とする実践や専門を越えて協働で作業すること により，お互いの実践を融合させてプロジェクトの目的を達成するように授業構成が行われて いる.そのため，本研究で導入するアプリ開発ソフトウェアは，アプリ開発の要件から実装ま でを機能中心に組み立てるのではなく、参加者それぞれの関心やスタンスを調整しその関係の あり方そのものからデザインすることを目的として実装されている.
+人文学部国際関係学科(以下，学科)と情報学部情報学科は，目的とする専門性や実践の違いから異なるCoPであると考えられる.研究対象のプロジェクト授業に参 加する国コミ学科の学生は英語でのプレゼンテーションが主な実践であり，情報学科の学生は プログラミングやアプリ開発が主な実践となる.  アプリ開発のプロセスにおいて，当然ながらアプリの実装が完了した後で，英語でのプレゼ ンテーションという順番になるため，両学科の学生が積極的に参加するタイミングは時期によって齟齬がおきる.加えて，国コミ学科はアプリ開発に携わった経験があるものはまれなた め，プロジェクト前半ではアプリ開発におけるコミュニケーションは積極的に意見を出すというよりも，観察を主とした参加の態度になる.これはCoPでいう正当的周辺参加と言い換えることができる.他方，情報学科は技術それ自体が主な実践のため，成果発表よりも技術のそれ 自体に価値を見出す傾向が見られる.  上記のように，両学科の学生が重きを置く実践(あるいは専門)の違いが，プロジェクトに積 極的に参加する時期のずれを生み出す.その結果，言葉の解釈の違い，プロジェクトにおける時間感覚のずれなどのディスコミュニケーションを引き起こす.  またプロジェクトに参加する態度として，自分の専門性に関わるタスクしか関心を向けない という態度は分業的なタスクの割り振りを引き起こし，このこともまたディスコミュニケー ションを引き起こす原因となる.他方，自分の専門を超えて，両学科が一緒に作業をする時間を設けることで，アプリ開発の過程やプレゼンテーション資料作成の過程に協働で関与する中 で，言葉の意味の交渉や目的の共有が行われ，人工物のデザインに異なる専門の知識や技術的なリソースが影響する.これはCoPでいう布置として扱われる.上記のように分業的，あるいは協働的といった関係のあり方がそれ自体が人工物の機能やUIに影響を及ぼすのではないかと いう示唆を得ている.
+
+
+本研究が対象とする授業は，両学科が自ら主とする実践や専門を越えて協働で作業すること により，お互いの実践を融合させてプロジェクトの目的を達成するように授業構成が行われて いる.そのため，本研究で導入するアプリ開発ソフトウェアは，アプリ開発の要件から実装ま でを機能中心に組み立てるのではなく、参加者それぞれの関心やスタンスを調整しその関係の あり方そのものからデザインすることを目的として実装されている.
 
 
  アプリ開発支援ソフトウェアは，Atlassia社が提供するプロジェクトのタスク管理をするた めのオンラインツールである「Trello」と連携して開発されたものである.Trelloが提供する API(Application Programming Interface)を使用して，Trelloのタスクが持つデータを抽出 し，グラフ構造として可視化する.この可視化機能により分業的，あるいは協働的にタスクを こなしているかを確認しながら，アプリ開発を行えるような想定をしている(図1).アプリ開 発支援ソフトウェアは，CoPの概念を参考に設計されており，「正統的周辺参加」をTrelloの カードの移動，プロジェクトのタスクがどの共同体に属しいてるかをTrelloのラベル機能を用 いて表す.
