キーワード，abstract

--- a/jsample.tex
+++ b/jsample.tex
@@ -37,25 +37,22 @@ Department of Computer Science, Graduate School of Systems and Information Engin
 \author{尼岡 利崇}{Toshitaka Amaoka}{Meisei}
 
 \begin{abstract}
-  本研究では，アプリケーション開発における異なる実践共同体の参加の過程を可視化するシステムを開発した．
+本研究では，アプリケーション開発における異なる実践共同体の参加の過程を可視化するシステムを開発した．
 著者らは過去に質的アプローチの観点から実践共同体(Community of Practice以下，CoP)の概念を用いて，異なる背景を持つプロジェクトメンバーの関係のあり方が，開発されるアプリケーションにどのような影響を及ぼすかという研究を行った．その研究結果をもとにCSCW(Computer Supported Cooperative Work)の観点から，アプリケーション開発の過程における，背景の異なるプロジェクトメンバーの関わり方を可視化するシステムの開発を行った．本システムを使用することにより，異なる背景を持つメンバーが参加するアプリ開発チームにおいて，アプリのデザインをメンバー間の関係構築のあり方からデザインを考えることを支援することを目的としている．
 \end{abstract}
 
 
 \begin{jkeyword}
-情報処理学会論文誌ジャーナル，\LaTeX，スタイルファイル，べからず集
+実戦共同体，CSCW，PBL，情報可視化
 \end{jkeyword}
 
 \begin{eabstract}
-This document is a guide to prepare a draft for submitting to IPSJ
-Journal, and the final camera-ready manuscript of a paper to appear in
-IPSJ Journal, using {\LaTeX} and special style files.  Since this
-document itself is produced with the style files, it will help you to
-refer its source file which is distributed with the style files.
+In this study, we have developed a system that visualizes the process of participation of different community of practice in application development.
+In the past, the authors used the concept of Community of Practice (CoP) from the perspective of a qualitative approach, and how the relationships between project members with different backgrounds affect the applications being developed. I did a study. Based on the research results, we developed a system that visualizes the involvement of project members with different backgrounds in the process of application development from the viewpoint of CSCW (Computer Supported Cooperative Work). By using this system, the purpose is to support the design of the application from the way of building relationships between the members in the application development team in which members with different backgrounds participate.
 \end{eabstract}
 
 \begin{ekeyword}
-IPSJ Journal, \LaTeX, style files, ``Dos and Don'ts'' list
+Community of Practice, CSCW, PBL, Data Visualization
 \end{ekeyword}
 
 \maketitle
