--- a/jsample.tex
+++ b/jsample.tex
@@ -66,23 +66,26 @@ Community of Practice, CSCW, PBL, Data Visualization
 本研究は，過去に行った異なる背景を持つプロジェクトメンバーの関係構築のあり方が，開発されるアプリケーションのデザインにどのような影響を及ぼすかという研究の結果に基に行われたものである．過去研究は大学の専門分野横断型PBL(Project based learning)を対象として行われており，その結果をもとにCSCW(Computer Supported Cooperative Work)の観点からアプリケーション開発の過程における，背景の異なるプロジェクトメンバーの関わり方を可視化するシステムの開発を行った．
 
 
-開発したシステムは，アプリ開発支援システムとして，ソフトウェアの開発手法の一つであるアジャイル開発に活用されることを目的としている．アジャイル開発とは機能単位の小さなサイクルで，設計・開 発・テストの工程を繰り返すことにより，様々な状況の変化に対応しながら開発を進めていく手法である.状況の変化に対応するため，日毎にdaily scrumと呼ばれる短い時間での進捗の 共有と反省を行う打ち合わせの時間が設けられている.[?]導入するアプリ開発支援ソフトウェアはdaily scrumに活用されることが想定されている.
+開発したシステムは，アプリ開発支援システムとして，ソフトウェアの開発手法の一つであるアジャイル開発に活用されることを目的としている．アジャイル開発とは機能単位の小さなサイクルで，設計・開 発・テストの工程を繰り返すことにより，様々な状況の変化に対応しながら開発を進めていく手法である.状況の変化に対応するため，日毎にdaily scrumと呼ばれる短い時間での進捗の共有と反省を行う打ち合わせの時間が設けられている.導入するアプリ開発支援ソフトウェアはdaily scrumに活用されることが想定されている.
 アプリ開発支援ソフトウェアを利用することで，アプリを開発するプロジェクトメンバーは，アプリの要件を機能中心で考えるのではなく，プロジェクトメンバーの関係性からも把握できるようになる.結果的に，開発されるアプリの機能やUIは，技術や機能中心に決定されるのではなく，プロジェクトメンバーが持つリソースを十分に利用できるような関係性から考えられるようになることを想定している.
 
 %2
 \section{先行研究}
 \label{previous-research}
 
-本研究は，道具やテクノロジーの開発によって人々の協調的作業を支援するシステムの開発を目標としたCSCWの観点から[?]，アプリケーション開発における異なる実践共同体の参加の過程を可視化するシステムを開発したものである．CSCWの発展はエスノメソドロジーに依拠したL.サッチマンの影響を大きく受けている言える．サッチマンは人々が社会生活を営むために用いる「やり方」[?]を分析することを目的をするエスノメソドロジーの手法により，人間の行動は状況依存的に組織されていることを主張した[?].このような社会の行為を状況との関わりの中で分析する研究は，サッチマン以外にもE.ウェンガーが主張する実践共同体[?]の理論や，日本では，上野直樹を中心とした状況論の研究が行われている[?]．
+本研究は，道具やテクノロジーの開発によって人々の協調的作業を支援するシステムの開発を目標としたCSCWの観点から\cite{book6}，アプリケーション開発における異なる実践共同体の参加の過程を可視化するシステムを開発したものである．本節では，CSCWと実践共同体の概念及び，本研究がもとにしている過去研究を述べる．
 
-CSCWへの研究の発展に大きな貢献をしたサッチマンであったが，同時に異分野横断的研究について，組織上の困難さを抱えていた[?]．その苦悩とは，異なる専門性にかかわる分業的な関係のあり方，つまり，情報学研究とエスノメソドロジーの知識産出のプロセスや前提とする認識論のズレも関係していたと考えられる[?]．このような異なる背景を有するコミュニティのメンバー同士がコミュニケーションを行う場合，異分野横断的研究に関わらず，企業の部門間でも認識論の違いから主張の食い違いや対立が起きることもある[?]．
+\subsection{CSCWと状況論について}
+CSCWの発展はエスノメソドロジーに依拠したL.サッチマンの影響を大きく受けている．サッチマンは人々が社会生活を営むために用いる「やり方」\cite{book3}を分析することを目的をするエスノメソドロジーの手法により，人間の行動は状況依存的に組織されていることを主張した[?].このような社会の行為を状況との関わりの中で分析する研究は，サッチマン以外にもE.ウェンガーが主張する実践共同体\cite{book7}の理論や，日本では，上野直樹を中心とした状況論の研究が行われている\cite{book8}．
+
+CSCWへの研究の発展に大きな貢献をしたサッチマンであったが，同時に異分野横断的研究について，組織上の困難さを抱えていた[?]．その苦悩とは，異なる専門性にかかわる分業的な関係のあり方，つまり，情報学研究とエスノメソドロジーの知識産出のプロセスや前提とする認識論のズレも関係していたと考えられる\cite{book3}．このような異なる背景を有するコミュニティのメンバー同士がコミュニケーションを行う場合，異分野横断的研究に関わらず，企業の部門間でも認識論の違いから主張の食い違いや対立が起きることもある\cite{book4}．
 
 上記のような異なる専門性や背景をもつメンバー同士の関係についてどのように実践が行われているかの分析を行うには，実践共同体の概念を用いることが有効であると考える．
-実践共同体とは，成員の学習の促進あるいは知識を共有・創造といったある一定のテーマや目的のもとに構築された共同体である[?].実践共同体には，正統的周辺参加，ディスコース，布置といった概念を含んでいる．正統的周辺参加とは，成員がある実践共同体に加わり，技能の獲得と成員のアイデンティティの発達を達成していくその軌跡(Trajectory)を表す概念である．ディスコースとは，実践共同体に共有される話し手のミクロな会話からマクロな価値観まで含む文化のことを意味する．布置とは，成員は単一の実践共同体のみに参加するものではなく，複数の実践共同体の参加することから，複数の実践共同体に参加しその関係を捉える概念である．
+実践共同体とは，成員の学習の促進あるいは知識を共有・創造といったある一定のテーマや目的のもとに構築された共同体である\cite{book5}.実践共同体には，正統的周辺参加，ディスコース，布置といった概念を含んでいる．正統的周辺参加とは，成員がある実践共同体に加わり，技能の獲得と成員のアイデンティティの発達を達成していくその軌跡(Trajectory)を表す概念である．ディスコースとは，実践共同体に共有される話し手のミクロな会話からマクロな価値観まで含む文化のことを意味する．布置とは，成員は単一の実践共同体のみに参加するものではなく，複数の実践共同体の参加することから，複数の実践共同体に参加しその関係を捉える概念である．
 
-実践共同体の概念を用いた研究について，学習という側面に関し ての多くの研究で効果が指摘されているが，異なるCoPの関係構築のあり方と開発されるアプリへの影響と変化を扱う研究は著者が知る限り少ない.しかし，上野[2]が示すように人工物は，様々な組織間やコミュニティ間の調停，交渉の産物として形成されており，人工物のデザインとはコミュニティのデザインであると述べているように，実践共同体の概念を用いた分析は学習以外にも焦点を向ける有用性があると考えられる．そのため，異なる背景を持つメンバー同士の関係のあり方を実践共同体の概念から分析し，生み出される人工物のデザインー本研究ではアプリのデザインーを紐付けるプロセスは有効であると考える．
+実践共同体の概念を用いた研究について，学習という側面に関し ての多くの研究で効果が指摘されているが，異なるCoPの関係構築のあり方と開発されるアプリへの影響と変化を扱う研究は著者が知る限り少ない.しかし，上野\cite{book1}が示すように人工物は，様々な組織間やコミュニティ間の調停，交渉の産物として形成されており，人工物のデザインとはコミュニティのデザインであると述べているように，実践共同体の概念を用いた分析は学習以外にも焦点を向ける有用性があると考えられる．そのため，異なる背景を持つメンバー同士の関係のあり方を実践共同体の概念から分析し，生み出される人工物のデザインー本研究ではアプリのデザインーを紐付けるプロセスは有効であると考える．
 
-
+\subsection{アプリ開発におけるPBLのCoPの概念による分析}
 人文学部国際関係学科(以下，学科)と情報学部情報学科は，目的とする専門性や実践の違いから異なるCoPであると考えられる.研究対象のプロジェクト授業に参 加する国コミ学科の学生は英語でのプレゼンテーションが主な実践であり，情報学科の学生は プログラミングやアプリ開発が主な実践となる.  アプリ開発のプロセスにおいて，当然ながらアプリの実装が完了した後で，英語でのプレゼ ンテーションという順番になるため，両学科の学生が積極的に参加するタイミングは時期によって齟齬がおきる.加えて，国コミ学科はアプリ開発に携わった経験があるものはまれなた め，プロジェクト前半ではアプリ開発におけるコミュニケーションは積極的に意見を出すというよりも，観察を主とした参加の態度になる.これはCoPでいう正当的周辺参加と言い換えることができる.他方，情報学科は技術それ自体が主な実践のため，成果発表よりも技術のそれ 自体に価値を見出す傾向が見られる.  上記のように，両学科の学生が重きを置く実践(あるいは専門)の違いが，プロジェクトに積 極的に参加する時期のずれを生み出す.その結果，言葉の解釈の違い，プロジェクトにおける時間感覚のずれなどのディスコミュニケーションを引き起こす.  またプロジェクトに参加する態度として，自分の専門性に関わるタスクしか関心を向けない という態度は分業的なタスクの割り振りを引き起こし，このこともまたディスコミュニケー ションを引き起こす原因となる.他方，自分の専門を超えて，両学科が一緒に作業をする時間を設けることで，アプリ開発の過程やプレゼンテーション資料作成の過程に協働で関与する中 で，言葉の意味の交渉や目的の共有が行われ，人工物のデザインに異なる専門の知識や技術的なリソースが影響する.これはCoPでいう布置として扱われる.上記のように分業的，あるいは協働的といった関係のあり方がそれ自体が人工物の機能やUIに影響を及ぼすのではないかと いう示唆を得ている.
 
 
@@ -162,6 +165,48 @@ Addison Wesley, Reading, Massachusetts (1993).
 木下是雄：
 理科系の作文技術，
 中公新書(1981).
+
+\bibitem{book1}
+上野直樹：
+『ネットワークとしての状況論』．『文化と状況的学習 実践，言語，人工物へ のアクセスのデザイン』 pp. 3-40，
+凡人社(2010).
+
+\bibitem{book2}
+ソーヤーりえこ：
+『社会的実践としての学習ー 状況的学習論概観』．『文化と状況的学習 実践，言語，人工物へ のアクセスのデザイン』 pp. 41-89，
+凡人社(2010).
+
+\bibitem{book3}
+秋谷直矩,森村吉貴,森幹彦,水町衣里,元木環,高梨克也, 加納圭：
+『社会的コンテクスト」の記述とデザイン-組織的ワークを支援するソフトウェア開発を事例に』.：『ワークプレイス・スタディーズ はたらくことのエスノメソドロジー』 pp. 278- 296，
+ハーベスト社(2017).
+
+\bibitem{book4}
+徐恩之: {\it 職能横断的なコミュニケーション
+におけるコンフリクトのトランスファー},
+組織科学,
+Vol. 45, No. 3 , pp. 22-34. (2012).
+
+\bibitem{book5}
+松本雄一: {\it 実践共同体概念についての一考 察: E. Wengerの実践共同体論を読み解く},
+関西学 院大学『商学論究』,
+Vol.64, No.3, pp. 347-409. (2017).
+
+\bibitem{book6}
+武富 拓也: {\it 複数の実践共同体の関係構築のあり方と観光アプリケーション開発への影響の考察},
+日本認知科学学会,
+(2016).
+
+\bibitem{book7}
+Wenger, E.: {\it Communities of practice : learning,
+meaning, and identity.},
+Cambridge :Cambridge University
+Press. pp. 55-57 (1998).
+
+\bibitem{book8}
+上野直樹：
+シリーズ人間の発達9　仕事の中での学習　状況論的アプローチ，
+東京大学出版会(1999).
 
 \bibitem{book2}
 Strunk, W.J. and White, E.B.: {\it The Elements of Style, Forth Edition},
