https://a2b-group.slack.com/archives/CJTP1DR5F/p1627299358003500

--- a/jsample.tex
+++ b/jsample.tex
@@ -180,7 +180,7 @@ PBL型授業を対象に分析が行われた．
 国際学科と情報学科のそれぞれの実践共同体は，目的とする専門性や実践が異なる．
 研究対象のPBL授業に参加する国際学科の学生は
 英語でのプレゼンテーションが主な実践であり，
-情報学科の学生はプログラミングやアプリ開発が主な実践となる. 
+情報学科の学生はプログラミングやアプリ開発が主な実践となる.
 　
 
 PBL授業では，アプリの実装が完了した後で，
@@ -228,13 +228,6 @@ PBL授業では，アプリの実装が完了した後で，
 参加者それぞれの関心やスタンスを調整し
 その関係のあり方そのものからデザインすることを可能にすることが期待されている．
 
-
- 本研究のシステムは，Atlassian社が提供するプロジェクトのタスク管理をするための
- オンラインツールである「Trello」\cite{trello}と連携して開発されたものである.
- Trelloが提供する API(Application Programming Interface)を使用して，
- Trelloのタスクが持つデータを抽出し，ネットワーク構造として可視化する.
- この可視化機能により分業的，あるいは協働的にタスクを こなしているかを確認しながら，
- アプリ開発を行えるような想定をしている.
  % アプリ開発支援ソフトウェアは，実践共同体の概念を参考に設計されている．
  % \begin{enumerate}
 %     「正統的周辺参加」をTrelloの カードの移動，プロジェクトのタスクがどの共同体に属しいてるかをTrelloのラベル機能を用 いて表す.
@@ -254,10 +247,19 @@ PBL授業では，アプリの実装が完了した後で，
   \label{cop-map-graph}
 \end{figure}
 
-本システムでは，
+本システムは，
+Atlassian社が提供するタスク管理ツールTrello\cite{trello}と連携して動作する．
+Trelloによって管理しているタスクの情報を，
+Web APIを使って取得することで，
+% Trelloが提供するWeb APIを使用して，
+% タスクの情報を取得することで，
+分業的あるいは協働的にタスクをこなしているかを確認しながら，
+アプリ開発を行うことが可能である．
+
+可視化の際には，
 プロジェクトメンバーをノード，
 プロジェクトメンバーが協働でタスクを行った履歴をエッジとして，
-ネットワーク構造でプロジェクトメンバーの関係性を可視化している．
+ネットワーク構造でプロジェクトメンバーの関係性を表現している．
 % プロジェクトメンバーの関係性をネットワーク構造で可視化した理由は，
 % xxx
 % である．
