十全参加をコメントアウト

--- a/jsample.tex
+++ b/jsample.tex
@@ -285,8 +285,8 @@ Web APIを使って取得することで，
 この場合は，観察対象となるプロジェクトメンバーは，
 タスクを行った回数は少ないが，
 リソースへのアクセスが可能な状態だと考える事ができる．
-よって，現在は正統的周辺参加だが，
-プロジェクトの進行状況によっては十全参加に移行する可能性もあると考えられる．
+% よって，現在は正統的周辺参加だが，
+% プロジェクトの進行状況によっては十全参加に移行する可能性もあると考えられる．
 
 以上のネットワーク構造を，プロジェクトの時系列順に変化させることで，
 プロジェクトメンバーの関係性の変化を観察することを可能にしている．
