--- a/jsample.tex
+++ b/jsample.tex
@@ -398,13 +398,13 @@ Computer Supported Cooperative Work, :Springer,
 日本認知科学学会,
 (2016).
 
-\bibitem{book13}
-Strunk, W.J. and White, E.B.: {\it The Elements of Style, Forth Edition},
-Longman (2000).
-
-\bibitem{book14}
-Blake, G. and Bly, R.W.: {\it The Elements of Technical Writing},
-Longman (1993).
+% \bibitem{book13}
+% Strunk, W.J. and White, E.B.: {\it The Elements of Style, Forth Edition},
+% Longman (2000).
+%
+% \bibitem{book14}
+% Blake, G. and Bly, R.W.: {\it The Elements of Technical Writing},
+% Longman (1993).
 
 \bibitem{trello}
 Atlassian.
