章タイトル変更

--- a/jsample.tex
+++ b/jsample.tex
@@ -262,7 +262,7 @@ PBL授業では，アプリの実装が完了した後で，
 %     「正統的周辺参加」をTrelloの カードの移動，プロジェクトのタスクがどの共同体に属しいてるかをTrelloのラベル機能を用 いて表す.
 % \end{enumerate}
 
-\section{本システムについて}
+\section{実践共同体の可視化システムについて}
 \label{system-map}
 
 \begin{figure}[h]
