従来の表現と，今回の可視化手法の違いについて

--- a/jsample.tex
+++ b/jsample.tex
@@ -267,17 +267,27 @@ PBL授業では，アプリの実装が完了した後で，
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.5\textwidth]{img/cop-map-graph.eps}
+  \includegraphics[width=0.5\textwidth]{img/cop-map-graph-trim.eps}
   \caption{本システムによってプロジェクトメンバーの関係性を可視化した様子}
   \label{cop-map-graph}
 \end{figure}
+
+図\ref{cop}と図\ref{overlap}で示したように，
+従来までの実践共同体と参加者の関係性は，
+ベン図の様な形で表されてきた．
+% 従来の表現の欠点と本研究の可視化手法の強み
+しかし，xxxやxxxの観点から，
+xxxを表現するには適していないと考えられる．
+そこで，本研究では，
+プロジェクトメンバをノード，
+プロジェクトメンバが協働でタスクを行った履歴をエッジとした，
+ネットワーク構造として捉えることで，
+xxxを可能にした．
 
 本システムは，
 Atlassian社が提供するタスク管理ツールTrello\cite{trello}と連携して動作する．
 Trelloによって管理しているタスクの情報を，
 Web APIを使って取得することで，
-% Trelloが提供するWeb APIを使用して，
-% タスクの情報を取得することで，
 分業的あるいは協働的にタスクをこなしているかを確認しながら，
 アプリ開発を行うことが可能である．
 
@@ -285,9 +295,6 @@ Web APIを使って取得することで，
 プロジェクトメンバをノード，
 プロジェクトメンバが協働でタスクを行った履歴をエッジとして，
 ネットワーク構造でプロジェクトメンバの関係性を表現している．
-% プロジェクトメンバーの関係性をネットワーク構造で可視化した理由は，
-% xxx
-% である．
 本システムによって可視化したプロジェクトメンバの関係性を，
 図\ref{cop-map-graph}に示す．
 
