とりあえず全部に図を挿入

--- a/jsample.tex
+++ b/jsample.tex
@@ -265,6 +265,13 @@ PBL授業では，アプリの実装が完了した後で，
 \section{実践共同体の可視化システムについて}
 \label{system-map}
 
+本研究における可視化システムは，
+Atlassian社が提供するタスク管理ツールTrello\cite{trello}と連携して動作する．
+Trello上で管理しているタスクの情報を，
+Web APIを使って取得することで，
+分業的あるいは協働的にタスクをこなしているかを確認しながら，
+アプリ開発を行うことが可能である．
+
 図\ref{cop}と図\ref{overlap}で示したように，
 従来までの実践共同体と参加者の関係性は，
 ベン図の様な形で表されてきた．
@@ -286,19 +293,22 @@ xxxを可能にした．
   \label{cop-map-graph}
 \end{figure}
 
-本システムは，
-Atlassian社が提供するタスク管理ツールTrello\cite{trello}と連携して動作する．
-Trelloによって管理しているタスクの情報を，
-Web APIを使って取得することで，
-分業的あるいは協働的にタスクをこなしているかを確認しながら，
-アプリ開発を行うことが可能である．
-
 本システムでは，ネットワーク構造のレイアウト手法として，力学モデルを採用している．
 その際に，協働でタスクを行った回数によってエッジの強度を変化させている．
 よって，多くのタスクを協働で行うほど，
 ノード間の距離は近くなるように配置される．
-% 共同ノード間の距離
-% これにより，
+これにより，頻繁に協働でタスクを行っているプロジェクトメンバを確認することができる．
+また，そのプロジェクトメンバが異なる実践共同体に所属していた場合に，
+異なる実践共同体の間で，協働的にタスクが行われているかを観察することができる．
+本システムによって可視化された，
+協働で行われたタスクを図\ref{cop-map-task}に示す．
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.5\textwidth]{img/cop-map-task.eps}
+  \caption{本システムによって可視化された協働で行われたタスク}
+  \label{cop-map-task}
+\end{figure}
 
 また，プロジェクトメンバの所属先によってノードの色を変化させることで，
 異なる実践共同体に所属するプロジェクトメンバが，
@@ -336,6 +346,15 @@ Web APIを使って取得することで，
 これにより，ノードの軌跡から，
 進行状況によって変化していく，
 プロジェクトメンバの軌跡を観察することを可能にしている．
+本システムによって観察されるプロジェクトメンバの軌跡を，
+図\ref{cop-map-trajectory}に示す．
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.5\textwidth]{img/cop-map-trajectory.eps}
+  \caption{本システムによって観察されるプロジェクトメンバの軌跡}
+  \label{cop-map-trajectory}
+\end{figure}
 
 また，本システムではインタラクティブにデータを観察することが可能である．
 本システムで可能なインタラクションは，
@@ -347,19 +366,15 @@ Web APIを使って取得することで，
 そのノードに対応するユーザ名を確認することが可能である．
 これらのインタラクションにより，
 より詳細にプロジェクトメンバの関係性を観察することが可能である．
+インタラクションによって詳細情報を表示している様子を，
+図\ref{cop-map-detail}に示す．
 
-% \begin{enumerate}
-%    \item CoP
-%    \item 布置
-%    \item トラジェクトリー
-%    \item 正統的周辺参加
-% \end{enumerate}
-
-% 本システムは，アプリケーションサーバとデータベース，
-% 外部サービスであるTrelloから構成されている．
-%
-% タスクの履歴を，TrelloのWeb APIから取得して，
-% 時系列順にネットワーク構造に整形することで可視化している．
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.5\textwidth]{img/cop-map-detail.eps}
+  \caption{インタラクションによって詳細情報を表示している様子}
+  \label{cop-map-detail}
+\end{figure}
 
 %4
 \section{今後の展望}
