従来のデメリット途中

--- a/jsample.tex
+++ b/jsample.tex
@@ -266,18 +266,34 @@ PBL授業では，アプリの実装が完了した後で，
 \label{system-map}
 
 本研究における可視化システムは，
-Atlassian社が提供するタスク管理ツールTrello\cite{trello}と連携して動作する．
-Trello上で管理しているタスクの情報を，
-Web APIを使って取得することで，
-分業的あるいは協働的にタスクをこなしているかを確認しながら，
-アプリ開発を行うことが可能である．
+Atlassian社が提供するタスク管理サービスTrello\cite{trello}と連携して動作する．
+Trelloは，タスクの情報をカード，
+タスクの状態をボードとして管理するサービスである．
+利用者は，タスクを実行した際に，
+カードを次のボードに移動させる．
+これにより，プロジェクトメンバ間でタスクの進捗状況を共有することができる．
+また，Trelloでは，カードに複数人の作業担当者を設定することが可能である．
+そこで，本システムでは，
+同じカードに割り振られた作業担当者は，
+協働でタスクを行ったという前提で，
+Trello上でのカードの移動履歴を使用することで，
+プロジェクトメンバが協働作業をしている様子を可視化した．
 
 図\ref{cop}と図\ref{overlap}で示したように，
-従来までの実践共同体と参加者の関係性は，
+従来までの実践共同体とメンバの関係性は，
 ベン図の様な形で表されてきた．
 % 従来の表現の欠点と本研究の可視化手法の強み
-しかし，xxxやxxxの観点から，
-xxxを表現するには適していないと考えられる．
+% しかし，xxxやxxxの観点から，
+% xxxを表現するには適していないと考えられる．
+しかし，図\ref{cop}の様な表現では，
+実践共同体の中心と，メンバの距離を観察することはできるが，
+二人のメンバのなす角が何を表しているのかが定かではない．
+もし，二人のメンバのなす角が，
+メンバ間の親密度などを表しているとしても，
+メンバが四人以上の時に，
+二次元平面でメンバの関係性を表現することはできない．
+また，図\ref{overlap}においても，xxxである．
+% 従来のデメリット
 そこで，本研究では，
 プロジェクトメンバをノード，
 プロジェクトメンバが協働でタスクを行った履歴をエッジとした，
