--- a/jsample.tex
+++ b/jsample.tex
@@ -276,8 +276,8 @@ Trelloは，タスクの情報をカード，
 そこで，本システムでは，
 同じカードに割り振られた作業担当者は，
 協働でタスクを行ったという前提で，
-Trello上でのカードの移動履歴を使用することで，
-プロジェクトメンバが協働作業をしている様子を可視化した．
+Trello上でのカードの移動履歴を利用することで，
+プロジェクトメンバが協働で作業を行っている様子を可視化した．
 
 図\ref{cop}と図\ref{overlap}で示したように，
 従来までの実践共同体とメンバの関係性は，
