メンバー -> メンバ

--- a/jsample.tex
+++ b/jsample.tex
@@ -305,7 +305,7 @@ xxxを可能にした．
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.5\textwidth]{img/cop-map-graph.eps}
-  \caption{本システムによってプロジェクトメンバーの関係性を可視化した様子}
+  \caption{本システムによってプロジェクトメンバの関係性を可視化した様子}
   \label{cop-map-graph}
 \end{figure}
 
@@ -348,12 +348,12 @@ xxxを可能にした．
 タスクを行った回数は少ないが，
 リソースへのアクセスが可能な状態だと考える事ができる．
 本システムによって，
-観察される正統的周辺参加である可能性のあるプロジェクトメンバーを図\ref{cop-map-lpp}に示す．
+観察される正統的周辺参加である可能性のあるプロジェクトメンバを図\ref{cop-map-lpp}に示す．
 
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.5\textwidth]{img/cop-map-lpp.eps}
-  \caption{本システムによって観察される正統的周辺参加である可能性のあるプロジェクトメンバー}
+  \caption{本システムによって観察される正統的周辺参加である可能性のあるプロジェクトメンバ}
   \label{cop-map-lpp}
 \end{figure}
 
