--- a/jsample.tex
+++ b/jsample.tex
@@ -281,7 +281,7 @@ Trello上でのカードの移動履歴を利用することで，
 
 図\ref{cop}と図\ref{overlap}で示したように，
 従来までの実践共同体とメンバの関係性は，
-ベン図の様な形で表されてきた．
+ベン図のような形で表されてきた．
 % 従来の表現の欠点と本研究の可視化手法の強み
 % しかし，xxxやxxxの観点から，
 % xxxを表現するには適していないと考えられる．
@@ -294,6 +294,8 @@ Trello上でのカードの移動履歴を利用することで，
 二次元平面でメンバの関係性を表現することはできない．
 また，図\ref{overlap}においても，xxxである．
 % 従来のデメリット
+% MEMO: N個のベン図は表現可能
+% https://nunuki.hatenablog.com/entry/2017/12/31/175302
 そこで，本研究では，
 プロジェクトメンバをノード，
 プロジェクトメンバが協働でタスクを行った履歴をエッジとした，
