--- a/jsample.tex
+++ b/jsample.tex
@@ -286,12 +286,13 @@ Trello上でのカードの移動履歴を利用することで，
 % しかし，xxxやxxxの観点から，
 % xxxを表現するには適していないと考えられる．
 しかし，図\ref{cop}の様な表現では，
-実践共同体の中心と，メンバの距離を観察することはできるが，
-二人のメンバのなす角が何を表しているのかが定かではない．
-もし，二人のメンバのなす角が，
-メンバ間の親密度などを表しているとしても，
+実践共同体の中心と，メンバの距離を表すことはできるが，
+可視化の際に，このイメージをそのまま利用すると，
+二人のメンバのなす角が余計な情報として表されてしまう．
+もし，二人のメンバのなす角によって，
+協働でタスクを行った回数などを表すとしても，
 メンバが四人以上の時に，
-二次元平面でメンバの関係性を表現することはできない．
+二次元平面で全てのメンバの関係性を完全に表現することはできない．
 また，図\ref{overlap}においても，xxxである．
 % 従来のデメリット
 % MEMO: N個のベン図は表現可能
