--- a/jsample.tex
+++ b/jsample.tex
@@ -293,7 +293,8 @@ Trello上でのカードの移動履歴を利用することで，
 協働でタスクを行った回数などを表すとしても，
 メンバが四人以上の時に，
 二次元平面で全てのメンバの関係性を完全に表現することはできない．
-また，図\ref{overlap}においても，xxxである．
+また，図\ref{overlap}の様な表現においても，
+xxxである．
 % 従来のデメリット
 % MEMO: N個のベン図は表現可能
 % https://nunuki.hatenablog.com/entry/2017/12/31/175302
