--- a/jsample.tex
+++ b/jsample.tex
@@ -285,13 +285,13 @@ Trello上でのカードの移動履歴を利用することで，
 % 従来の表現の欠点と本研究の可視化手法の強み
 % しかし，xxxやxxxの観点から，
 % xxxを表現するには適していないと考えられる．
-しかし，図\ref{cop}の様な表現では，
+しかし，可視化の際に，
+図\ref{cop}の様な表現を採用すると　，
 実践共同体の中心と，メンバの距離を表すことはできるが，
-可視化の際に，このイメージをそのまま利用すると，
 二人のメンバのなす角が余計な情報として表されてしまう．
 もし，二人のメンバのなす角によって，
 協働でタスクを行った回数などを表すとしても，
-メンバが四人以上の時に，
+メンバが四人以上のプロジェクトを対象とした場合に，
 二次元平面で全てのメンバの関係性を完全に表現することはできない．
 また，図\ref{overlap}の様な表現においても，
 xxxである．
