--- a/jsample.tex
+++ b/jsample.tex
@@ -286,14 +286,15 @@ Trello上でのカードの移動履歴を利用することで，
 % しかし，xxxやxxxの観点から，
 % xxxを表現するには適していないと考えられる．
 しかし，可視化の際に，
-図\ref{cop}の様な表現を採用すると　，
+図\ref{cop}の様な表現を採用すると，
 実践共同体の中心と，メンバの距離を表すことはできるが，
 二人のメンバのなす角が余計な情報として表されてしまう．
 もし，二人のメンバのなす角によって，
 協働でタスクを行った回数などを表すとしても，
 メンバが四人以上のプロジェクトを対象とした場合に，
 二次元平面で全てのメンバの関係性を完全に表現することはできない．
-また，図\ref{overlap}の様な表現においても，
+また，布置を可視化する際に，
+図\ref{overlap}の様な表現を採用した場合にも，
 xxxである．
 % 従来のデメリット
 % MEMO: N個のベン図は表現可能
