--- a/jsample.tex
+++ b/jsample.tex
@@ -279,31 +279,32 @@ Trelloは，タスクの情報をカード，
 Trello上でのカードの移動履歴を利用することで，
 プロジェクトメンバが協働で作業を行っている様子を可視化した．
 
-図\ref{cop}と図\ref{overlap}で示したように，
+% 従来の概念図と，本システムによる可視化の比較
+% MEMO: N個のベン図は表現可能
+% https://nunuki.hatenablog.com/entry/2017/12/31/175302
 従来までの実践共同体とメンバの関係性は，
-ベン図のような形で表されてきた．
-% 従来の表現の欠点と本研究の可視化手法の強み
-% しかし，xxxやxxxの観点から，
-% xxxを表現するには適していないと考えられる．
+図\ref{cop}と図\ref{overlap}で示したように，
+実践共同体を集合，
+そこに属するメンバを要素として表現されてきた．
 しかし，実践共同体とプロジェクトメンバの関係性を可視化する際に，
 図\ref{cop}の様な表現を採用することを考えると，
 実践共同体の中心と，メンバの距離を表すことはできるが，
-二人のメンバのなす角が余計な情報として表されてしまう．
-もし，二人のメンバのなす角によって，
+メンバ間の距離や，
+メンバ間のなす角が余計な情報として表されてしまう．
+もし，距離やなす角によって，
 協働でタスクを行った回数などを表すとしても，
 メンバが四人以上のプロジェクトを対象とした場合に，
-二次元平面で全てのメンバの関係性を完全に表現することはできない．
+二次元平面で全てのメンバの関係性を表現することはできない．
 また，布置を可視化する際に，
 図\ref{overlap}の様な表現を採用することを考えた場合にも，
-xxxである．
-% 従来のデメリット
-% MEMO: N個のベン図は表現可能
-% https://nunuki.hatenablog.com/entry/2017/12/31/175302
+3つ以上の実践共同体を表現しようとした際に，
+閉曲線が複雑化してしまい複雑化してしまう．
 そこで，本研究では，
 プロジェクトメンバをノード，
-プロジェクトメンバが協働でタスクを行った履歴をエッジとした，
-ネットワーク構造として捉えることで，
-xxxを可能にした．
+プロジェクトメンバが協働でタスクを行った履歴をエッジとすることで，
+プロジェクトの状況をネットワーク構造によって表現した．
+これにより，複雑なメンバの関係性や，
+異なる実践共同体間の関係性を観察することを可能にした．
 本システムによって可視化したプロジェクトメンバの関係性を，
 図\ref{cop-map-graph}に示す．
 
@@ -314,7 +315,7 @@ xxxを可能にした．
   \label{cop-map-graph}
 \end{figure}
 
-本システムでは，ネットワーク構造のレイアウト手法として，力学モデルを採用している．
+本システムでは，ノードのレイアウト手法として，力学モデルを採用している．
 その際に，協働でタスクを行った回数によってエッジの強度を変化させている．
 よって，多くのタスクを協働で行うほど，
 ノード間の距離は近くなるように配置される．
