--- a/jsample.tex
+++ b/jsample.tex
@@ -284,21 +284,25 @@ Trello上でのカードの移動履歴を利用することで，
 % https://nunuki.hatenablog.com/entry/2017/12/31/175302
 従来までの実践共同体とメンバの関係性は，
 図\ref{cop}と図\ref{overlap}で示したように，
-実践共同体を集合，
-そこに属するメンバを要素として表現されてきた．
+実践共同体とメンバを，
+領域と要素のように表現されてきた．
+% しかし，実践共同体とプロジェクトメンバの関係性を可視化する際に，
+% 図\ref{cop}の様な表現を採用することを考えると，
+% 実践共同体の中心と，メンバの距離を表すことはできるが，
+% メンバ間の距離や，
+% メンバ間のなす角が余計な情報として表されてしまう．
+% もし，距離やなす角によって，
+% 協働でタスクを行った回数などを表すとしても，
+% メンバが四人以上のプロジェクトを対象とした場合に，
+% 二次元平面で全てのメンバの関係性を表現することはできない．
 しかし，実践共同体とプロジェクトメンバの関係性を可視化する際に，
 図\ref{cop}の様な表現を採用することを考えると，
-実践共同体の中心と，メンバの距離を表すことはできるが，
-メンバ間の距離や，
-メンバ間のなす角が余計な情報として表されてしまう．
-もし，距離やなす角によって，
-協働でタスクを行った回数などを表すとしても，
-メンバが四人以上のプロジェクトを対象とした場合に，
-二次元平面で全てのメンバの関係性を表現することはできない．
+参加深度と同時に，
+メンバ同士の関係性を距離によって表現することは困難だと考えられる．
 また，布置を可視化する際に，
 図\ref{overlap}の様な表現を採用することを考えた場合にも，
 3つ以上の実践共同体を表現しようとした際に，
-閉曲線が複雑化してしまい複雑化してしまう．
+閉曲線が複雑化してしまう可能性が考えられる．
 そこで，本研究では，
 プロジェクトメンバをノード，
 プロジェクトメンバが協働でタスクを行った履歴をエッジとすることで，
@@ -316,14 +320,14 @@ Trello上でのカードの移動履歴を利用することで，
 \end{figure}
 
 本システムでは，ノードのレイアウト手法として，力学モデルを採用している．
-その際に，協働でタスクを行った回数によってエッジの強度を変化させている．
-よって，多くのタスクを協働で行うほど，
+また，協働でタスクを行った回数によってエッジの強度を変化させることで，
+多くのタスクを協働で行うほど，
 ノード間の距離は近くなるように配置される．
 これにより，頻繁に協働でタスクを行っているプロジェクトメンバを確認することができる．
 また，そのプロジェクトメンバが異なる実践共同体に所属していた場合に，
 異なる実践共同体の間で，協働的にタスクが行われているかを観察することができる．
 本システムによって可視化された，
-協働で行われたタスクを図\ref{cop-map-task}に示す．
+協働で行われたタスクの様子を図\ref{cop-map-task}に示す．
 
 \begin{figure}[h]
   \centering
@@ -336,7 +340,7 @@ Trello上でのカードの移動履歴を利用することで，
 異なる実践共同体に所属するプロジェクトメンバが，
 協働でタスクを行っている様子を観察することを可能にしている．
 これにより，異なる色のノードがエッジでつながっている様子から，
-布置を観察することを可能にしている．
+布置を観察することができる．
 本システムによって観察される布置の例を，
 図 \ref{cop-map-overlap}に示す．
 
