--- a/wiss/sample.bib
+++ b/wiss/sample.bib
@@ -1,4 +1,4 @@
-@Article{preStudy,
+@proceedings{preStudy,
   author = 	 {武富 拓也},
   title = 	 {複数の実践共同体の関係構築のあり方と観光アプリケーション開発への影響の考察},
   booktitle = {インタラクティブシステムとソフトウェアVIII},
@@ -7,64 +7,103 @@
   publisher = {日本認知科学学会},
 }
 
-@Book{cscwDefin,
-  author = 	 {秋谷直矩},
-  title = 	 {組織コミュニケーションのデザイン},
-  booktitle = {ワークプレイス・スタディーズ はたらくことのエスノメソドロジー},
-  pages = 	 {92-100},
-  year = 	 {2017},
-  publisher = {ハーベスト社},
+@inbook{cscwDefin,
+  author={秋谷直矩},
+  title={『組織コミュニケーションのデザイン』.：『ワークプレイス・スタディーズ はたらくことのエスノメソドロジー』},
+  publisher={ハーベスト社},
+  year={2018},
+  pages={92-100},
 }
 
-@Book{ethnomethodology,
-  title = 	 {IEEE Style Manual},
-  howpublished = {http://ieeeauthorcenter.ieee.org/wp-content/uploads/IEEE\_Style\_Manual.pdf},
+@inbook{ethnomethodology,
+  author={水川喜文・秋谷直矩・五十嵐素子},
+  title={水川喜文・秋谷直矩・五十嵐素子編『ワークプレイス・スタディーズ――はたらくことのエスノメソドロジー』},
+  publisher={ハーベスト社},
+  year={2018},
+  pages={1-20},
 }
 
-@Book{suchman,
-  title = 	 {IEEE Style Manual},
-  howpublished = {http://ieeeauthorcenter.ieee.org/wp-content/uploads/IEEE\_Style\_Manual.pdf},
+@book{suchman,
+  author={ルーシー A サッチマン},
+  title={プランと状況的行為},
+  publisher={産業図書},
+  year={1999},
 }
 
-@Book{wenger,
-  title = 	 {IEEE Style Manual},
-  howpublished = {http://ieeeauthorcenter.ieee.org/wp-content/uploads/IEEE\_Style\_Manual.pdf},
+@book{wenger,
+  author={Wenger, E.},
+  title={Communities of practice : learning,meaning, and identity},
+  publisher={Cambridge :Cambridge UniversityPress},
+  year={1998},
 }
-@Book{ueno,
-  title = 	 {IEEE Style Manual},
-  howpublished = {http://ieeeauthorcenter.ieee.org/wp-content/uploads/IEEE\_Style\_Manual.pdf},
+
+@book{ueno,
+  author={上野直樹},
+  title={シリーズ人間の発達9　仕事の中での学習　状況論的アプローチ},
+  publisher={東京大学出版会(1999)},
+  year={1999},
 }
-@Book{SuchmanDistress,
-  title = 	 {IEEE Style Manual},
-  howpublished = {http://ieeeauthorcenter.ieee.org/wp-content/uploads/IEEE\_Style\_Manual.pdf},
+
+@article{SuchmanDistress,
+  author = {Suchman, L.},
+  title = {Working Relations of Technology Production and Use.,Computer Supported Cooperative Work},
+  jurnal = {Springer},
+  volume = {2},
+  pages = {21-39},
+  year = {1993},
 }
-@Book{gap,
-  title = 	 {IEEE Style Manual},
-  howpublished = {http://ieeeauthorcenter.ieee.org/wp-content/uploads/IEEE\_Style\_Manual.pdf},
+
+@inbook{gap,
+  author={秋谷直矩},
+  title={『メディアとデザインのインターフェース』.：『ワークプレイス・スタディーズ はたらくことのエスノメソドロジー』},
+  publisher={ハーベスト社},
+  year={2018},
+  pages={227-236},
 }
-@Book{conflict,
-  title = 	 {IEEE Style Manual},
-  howpublished = {http://ieeeauthorcenter.ieee.org/wp-content/uploads/IEEE\_Style\_Manual.pdf},
+
+
+@article{conflict,
+  author = {徐恩之},
+  title = {職能横断的なコミュニケーションにおけるコンフリクトのトランスファー},
+  jurnal = {組織科学},
+  volume = {45},
+  number = {3},
+  pages = {21-34},
+  year = {2012},
 }
-@Book{copImg,
-  title = 	 {IEEE Style Manual},
-  howpublished = {http://ieeeauthorcenter.ieee.org/wp-content/uploads/IEEE\_Style\_Manual.pdf},
+
+@article{copImg,
+  author = {平山 絹恵, 齊藤 弘通},
+  title = {教育サービス事業組織における実践共同体の類型化に関する研究 -一般財団法人 言語交流研究所 ヒッポファミリークラブの実践共同体を事例として-},
+  jurnal = {産業能率大学紀要},
+  volume = {39},
+  number = {2},
+  pages = {1-18},
+  year = {2019},
 }
-@Book{discourse,
-  title = 	 {IEEE Style Manual},
-  howpublished = {http://ieeeauthorcenter.ieee.org/wp-content/uploads/IEEE\_Style\_Manual.pdf},
+
+@inbook{discourse,
+  author={ソーヤーりえこ},
+  title={『社会的実践としての学習ー 状況的学習論概観』．『文化と状況的学習 実践，言語，人工物へ のアクセスのデザイン』},
+  pages={41-89},
+  publisher={凡人社},
+  year={2010},
 }
-@Book{Matsumoto,
-  author = 	 {秋谷直矩},
-  title = 	 {『組織コミュニケーションのデザイン』.：『ワークプレイス・スタディーズ はたらくことのエスノメソドロジー』},
-  booktitle = {Proceedings of the 3rd IEEE International Symposium on Wearable Computers},
-  pages = 	 {92-100},
-  year = 	 {2017},
-  publisher = {ハーベスト社},
+@article{Matsumoto,
+  author = {松本雄一},
+  title = {実践共同体概念についての一考 察: E. Wengerの実践共同体論を読み解く},
+  jurnal = {関西学院大学『商学論究』},
+  volume = {64},
+  number = {3},
+  pages = {347-409},
+  year = {2017},
 }
-@Book{uenoArt,
-  title = 	 {IEEE Style Manual},
-  howpublished = {http://ieeeauthorcenter.ieee.org/wp-content/uploads/IEEE\_Style\_Manual.pdf},
+@inbook{uenoArt,
+  author={上野直樹},
+  title={『ネットワークとしての状況論』.『文化と状況的学習 実践，言語，人工物へ のアクセスのデザイン』},
+  pages={3-40},
+  publisher={凡人社},
+  year={2010},
 }
 @misc{trello,
   author  = {Atlassian},
