システムについて修正

--- a/wiss/wiss_template.tex
+++ b/wiss/wiss_template.tex
@@ -267,7 +267,21 @@ PBL授業では，アプリの実装が完了した後で，
 アプリの機能やUIがどのように決定されていくか 分析する予定である.
 加えてアプリ開発支援ソフトウェアがアプリ開発の過程にどのように影響を及ぼすかまで含めて分析を行う.
 
-%　遠藤が実装したい内容ついての記述
+また，本研究において開発した可視化システムについて，
+いくつかの改善点があげられる．
+まず，メンバがタスクを行った回数によって，
+ノードの半径を変化させている点についてである，
+半径が変化することによって，
+ノード間の可視性に影響を与えてしまうと考えられるので，
+ノードの彩度や明度を使った表現に変更することが考えられる．
+つぎに，現在のグラフ構造による可視化手法についてである．
+この問題点としては，
+メンバの数が増えた際にネットワークが複雑になってしまい，
+いわゆる毛玉問題の様な現象が起きてしまうことが考えられる．
+よって，メンバの数がネットワークが複雑になった場合の，
+ノードのレイアウト変更や，インタラクションの追加が考えられる．
+これらの点についても，
+学部横断型PBLのアプリ開発の際に改善点を精査し，修正する予定である．
 
 %5
 \section{おわりに}
