--- a/wiss/tex/system.tex
+++ b/wiss/tex/system.tex
@@ -1,5 +1,5 @@
 
-本研究における可視化システムは，
+本研究で開発した可視化システムは，
 Atlassian社が提供するタスク管理サービスTrello\cite{trello}と連携して動作する．
 Trelloは，タスクの情報をカード，
 タスクの状態をボードとして管理するサービスである．
@@ -16,10 +16,10 @@ Trello上でのカードの移動履歴を利用することで，
 % 従来の概念図と，本システムによる可視化の比較
 % MEMO: N個のベン図は表現可能
 % https://nunuki.hatenablog.com/entry/2017/12/31/175302
-従来までの実践共同体とメンバの関係性は，
+社会言語学において，
+実践共同体とメンバの関係性は，
 図\ref{cop}と図\ref{overlap}で示したように，
-実践共同体とメンバを，
-領域と要素のように表現されてきた．
+領域と要素のようなかたちで表現されてきた．
 % しかし，実践共同体とプロジェクトメンバの関係性を可視化する際に，
 % 図\ref{cop}の様な表現を採用することを考えると，
 % 実践共同体の中心と，メンバの距離を表すことはできるが，
@@ -29,17 +29,21 @@ Trello上でのカードの移動履歴を利用することで，
 % 協働でタスクを行った回数などを表すとしても，
 % メンバが四人以上のプロジェクトを対象とした場合に，
 % 二次元平面で全てのメンバの関係性を表現することはできない．
-しかし，実践共同体とプロジェクトメンバの関係性を可視化する際に，
-図\ref{cop}の様な表現を採用することを考えると，
-参加深度と同時に，
+しかし，図\ref{cop}の様な表現によって，
+実践共同体とプロジェクトメンバの関係性を可視化することを考えると，
+メンバの参加深度と同時に，
 メンバ同士の関係性を距離によって表現することは困難だと考えられる．
 また，布置を可視化する際に，
 図\ref{overlap}の様な表現を採用することを考えた場合にも，
 3つ以上の実践共同体を表現しようとした際に，
 閉曲線が複雑化してしまう可能性が考えられる．
+また，図\ref{overlap}の様な表現によって，
+布置を可視化することを考えた場合にも，
+3つ以上の実践共同体を可視化しようとした際に，
+閉曲線が複雑化してしまう可能性が考えられる．
 そこで，本研究では，
 プロジェクトメンバをノード，
-プロジェクトメンバが協働でタスクを行った履歴をエッジとすることで，
+プロジェクトメンバが協働でタスクを行った履歴をエッジとして，
 プロジェクトの状況をネットワーク構造によって表現した．
 これにより，複雑なメンバの関係性や，
 異なる実践共同体間の関係性を観察することを可能にした．
@@ -54,12 +58,12 @@ Trello上でのカードの移動履歴を利用することで，
 \end{figure}
 
 本システムでは，ノードのレイアウト手法として，力学モデルを採用している．
-また，協働でタスクを行った回数によってエッジの強度を変化させることで，
+また，協働でタスクを行った回数にが多いほど，
+エッジのバネ定数も高くなるようにすることで，
 多くのタスクを協働で行うほど，
-ノード間の距離は近くなるように配置される．
+ノード間の距離は近くに配置される．
 これにより，頻繁に協働でタスクを行っているプロジェクトメンバを確認することができる．
 また，そのプロジェクトメンバが異なる実践共同体に所属していた場合に，
-異なる実践共同体の間で，協働的にタスクが行われているかを観察することができる．
 本システムによって可視化された，
 協働で行われたタスクの様子を図\ref{cop-map-task}に示す．
 
@@ -70,24 +74,10 @@ Trello上でのカードの移動履歴を利用することで，
   \label{cop-map-task}
 \end{figure}
 
-また，プロジェクトメンバの所属先によってノードの色を変化させることで，
-異なる実践共同体に所属するプロジェクトメンバが，
-協働でタスクを行っている様子を観察することを可能にしている．
-これにより，異なる色のノードがエッジでつながっている様子から，
-布置を観察することができる．
-本システムによって観察される布置の例を，
-図 \ref{cop-map-overlap}に示す．
-
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=0.5\textwidth]{img/cop-map-overlap.eps}
-  \caption{本システムによって可視化された布置}
-  \label{cop-map-overlap}
-\end{figure}
-
-さらに，タスクを行った回数の合計値によってノードの大きさを変化させている．
+また，タスクを行った回数の合計値によってノードの半径を変化させている．
 これにより，プロジェクトメンバが正統的周辺参加である可能性を観察することが可能である．
-その一例として，ノードは小さいが，他のノードとの繋がりが見られる場合が挙げられる．
+その一例として，ノードは小さいが，
+他のノードとの繋がりが見られる場合が挙げられる．
 この場合は，観察対象となるプロジェクトメンバは，
 タスクを行った回数は少ないが，
 リソースへのアクセスが可能な状態だと考える事ができる．
@@ -101,14 +91,33 @@ Trello上でのカードの移動履歴を利用することで，
   \label{cop-map-lpp}
 \end{figure}
 
-以上のネットワーク構造を，プロジェクトの時系列順に変化させることで，
-プロジェクトメンバの関係性の変化を観察することを可能にしている．
-これにより，ノードの軌跡から，
-進行状況によって変化していく，
-プロジェクトメンバの軌跡を観察することを可能にしている．
+さらに，プロジェクトメンバの所属先によってノードの色を変化させることで，
+異なる実践共同体に所属するプロジェクトメンバが，
+協働でタスクを行っている様子を観察することを可能にしている．
+これにより，異なる色のノードがエッジでつながっている様子から，
+布置を観察することができる．
+本システムによって観察される布置の例を，
+図 \ref{cop-map-overlap}に示す．
+このように，布置を観察することで，
+プロジェクトが協働的に進行しているかを確認し，
+必要に応じて協働的な関係構築を促すことが可能である．
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.5\textwidth]{img/cop-map-overlap.eps}
+  \caption{本システムによって可視化された布置}
+  \label{cop-map-overlap}
+\end{figure}
+
+本システムでは以上のネットワーク構造を，
+プロジェクトの時系列順にアニメーションで表示することができる．
+これにより，プロジェクトメンバの関係性の変化を観察することを可能である．
+ノードの動きから，進行状況によって変化していく，
+プロジェクトメンバの軌跡を観察することができる．
 本システムによって観察されるプロジェクトメンバの軌跡を，
 図\ref{cop-map-trajectory}に示す．
 
+% TODO: 複数の画像をつなげる
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.5\textwidth]{img/cop-map-trajectory.eps}
