--- a/wiss/sample.bib
+++ b/wiss/sample.bib
@@ -110,39 +110,5 @@
 @misc{trello,
   author  = {Atlassian},
   title   = {Trello},
-  note    = {\url{https://trello.com/ja}},
-  year    = {2021}
-}
-
-@comment{
-
-%
-%\bibitem{preStudy} 武富 拓也． 複数の実践共同体の関係構築のあり方と観光アプリケーション開発への影響の考察, 日本認知科学学会, (2016).
-%
-%\bibitem{cscwDefin} 秋谷直矩：『組織コミュニケーションのデザイン』.：『ワークプレイス・スタディーズ はたらくことのエスノメソドロジー』 pp. 92-100，ハーベスト社(2017).
-%
-%\bibitem{ethnomethodology} 水川喜文・秋谷直矩・五十嵐素子：『ワークプレイス・スタディーズ はたらくことのエスノメソドロジー』 pp. 1-20，ハーベスト社(2017).
-%
-%\bibitem{suchman}ルーシー A. サッチマン, 佐伯胖・上野直樹・水川喜文・鈴木英幸訳：『プランと状況的行為ー人間-機械コミュニケーションの可能性』，産業図書(1999).
-%
-%\bibitem{wenger}Wenger, E.: Communities of practice : learning,meaning, and identity. ,Cambridge :Cambridge UniversityPress. pp. 55-57 (1998).
-%
-%\bibitem{ueno}上野直樹：シリーズ人間の発達9　仕事の中での学習　状況論的アプローチ，東京大学出版会(1999).
-%
-%\bibitem{SuchmanDistress}Suchman, L.,: Working Relations of Technology Production and Use.,Computer Supported Cooperative Work, :Springer,2(1-2): 21-39 (1993).
-%
-%\bibitem{gap}秋谷直矩：『メディアとデザインのインターフェース』.：『ワークプレイス・スタディーズ はたらくことのエスノメソドロジー』 pp. 227-236，ハーベスト社(2017).
-%
-%\bibitem{conflict}徐恩之: 職能横断的なコミュニケーションにおけるコンフリクトのトランスファー,組織科学,Vol. 45, No. 3 , pp. 22-34. (2012).
-%
-%\bibitem{copImg}平山 絹恵, 齊藤 弘通: 教育サービス事業組織における実践共同体の類型化に関する研究 -一般財団法人 言語交流研究所 ヒッポファミリークラブの実践共同体を事例として-,産業能率大学紀要,Vol. 39, No. 2 , pp. 1-18. (2019).
-%
-%\bibitem{discourse}ソーヤーりえこ：『社会的実践としての学習ー 状況的学習論概観』．『文化と状況的学習 実践，言語，人工物へ のアクセスのデザイン』 pp. 41-89，凡人社(2010).
-%
-%\bibitem{Matsumoto}松本雄一: 実践共同体概念についての一考 察: E. Wengerの実践共同体論を読み解く,関西学 院大学『商学論究』,Vol.64, No.3, pp. 347-409. (2017).
-%
-%\bibitem{uenoArt}上野直樹：『ネットワークとしての状況論』．『文化と状況的学習 実践，言語，人工物へ のアクセスのデザイン』 pp. 3-40，凡人社(2010).
-%
-%\bibitem{trello}Atlassian."Trello" https://trello.com/ja
-
+  note    = {\url{https://trello.com/ja}（参照）2021-09-01},
 }
