未来ビジョン用の調整コードを追加

--- a/wiss/wiss_template.tex
+++ b/wiss/wiss_template.tex
@@ -261,7 +261,7 @@ PBL授業では，アプリの実装が完了した後で，
 \input{tex/system}
 
 %4
-\section{今後の展望}
+\section{おわりに}
 
 本研究で開発したシステムは，2021年度9月より実施される学部横断型PBLのアプリ開発を
 行う際に使用される予定である．開発したシステムから，
@@ -285,10 +285,8 @@ PBL授業では，アプリの実装が完了した後で，
 これらの点についても，
 学部横断型PBLのアプリ開発の際に改善点を精査し，修正する予定である．
 
-%5
-\section{おわりに}
-
-% 今後の展望と終わりにまとめてしまってもよい?
+% FIXME: ここで未来ビジョンを調整する？
+\vspace{100mm}
 
 \section*{謝辞}
 シングルブラインド査読のため，謝辞は入れた状態で投稿する．
