--- a/wiss/tex/system.tex
+++ b/wiss/tex/system.tex
@@ -1,3 +1,21 @@
+% 3章にて
+% 本研究が開発したシステムは，アプリ開発支援システムとして，
+% 異分野横断的なアプリ開発において，
+% 異なる実践共同体が協働的な関係構築を行うことで，
+% お互いの実践を融合させてアプリ開発を支援することを目的としたシステムである．
+% 使用場面として，ソフトウェアの開発手法の一つである
+% アジャイル開発に活用されることを想定している．
+% アジャイル開発とは機能単位の小さなサイクルで，
+% 設計・開発・テストの工程を繰り返すことにより，
+% 様々な状況の変化に対応しながら開発を進めていく手法である.
+% 状況の変化に対応するため，
+% 日毎にdaily scrumと呼ばれる短い時間での進捗の共有と反省を行う
+% 打ち合わせの時間が設けられている.
+% 開発したシステムはdaily scrumに活用されることが想定されており，
+% アプリ開発の要件から実装までを機能中心に組み立てるのではなく、
+% 参加者それぞれの関心やスタンスを調整し
+% その関係のあり方そのものからデザインすることを可能にすることが期待されている．
+
 
 本研究で開発した可視化システムは，
 Atlassian社が提供するタスク管理サービスTrello\cite{trello}と連携して動作する．
@@ -99,7 +117,8 @@ Trello上でのカードの移動履歴を利用することで，
 本システムによって観察される布置の例を，
 図 \ref{cop-map-overlap}に示す．
 このように，布置を観察することで，
-プロジェクトが協働的に進行しているかを確認し，
+異分野横断的なアプリ開発において，
+異なる実践共同体が協働的な関係構築を行えているかを確認し，
 必要に応じて協働的な関係構築を促すことが可能である．
 
 \begin{figure}[h]
