--- a/wiss/tex/system.tex
+++ b/wiss/tex/system.tex
@@ -53,7 +53,7 @@ Trello上でのカードの移動履歴を利用することで，
 メンバ同士の関係性を距離によって表現することは困難だと考えられる．
 また，布置を可視化する際に，
 図\ref{overlap}の様な表現を採用することを考えた場合にも，
-3つ以上の実践共同体を表現しようとした際に，
+プロジェクトに参加している実践共同体の数が多くなった際に，
 閉曲線が複雑化してしまう可能性が考えられる．
 また，図\ref{overlap}の様な表現によって，
 布置を可視化することを考えた場合にも，
