--- a/wiss/tex/system.tex
+++ b/wiss/tex/system.tex
@@ -94,7 +94,7 @@ Trello上でのカードの移動履歴を利用することで，
 
 また，タスクを行った回数の合計値によってノードの半径を変化させている．
 これにより，プロジェクトメンバが正統的周辺参加である可能性を観察することが可能である．
-その一例として，ノードは小さいが，
+その例として，ノードは小さいが，
 他のノードとの繋がりが見られる場合が挙げられる．
 この場合は，観察対象となるプロジェクトメンバは，
 タスクを行った回数は少ないが，
@@ -133,6 +133,10 @@ Trello上でのカードの移動履歴を利用することで，
 これにより，プロジェクトメンバの関係性の変化を観察することを可能である．
 ノードの動きから，進行状況によって変化していく，
 プロジェクトメンバの軌跡を観察することができる．
+これにより，プロジェクトを振り返った際に，
+正統的周辺参加であったメンバが中心に移動する様子や，
+異なる実践共同体間で布置が構築されていく様子を観察することができる．
+% 「布置が構築される」構築されるでいいの？
 本システムによって観察されるプロジェクトメンバの軌跡を，
 図\ref{cop-map-trajectory}に示す．
 
@@ -157,6 +161,7 @@ Trello上でのカードの移動履歴を利用することで，
 インタラクションによって詳細情報を表示している様子を，
 図\ref{cop-map-detail}に示す．
 
+% TODO: 複数の画像をつなげる
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.5\textwidth]{img/cop-map-detail.eps}
