画像を更新

--- a/wiss/tex/system.tex
+++ b/wiss/tex/system.tex
@@ -81,16 +81,6 @@ Trello上でのカードの移動履歴を利用することで，
 多くのタスクを協働で行うほど，
 ノード間の距離は近くに配置される．
 これにより，頻繁に協働でタスクを行っているプロジェクトメンバを確認することができる．
-また，そのプロジェクトメンバが異なる実践共同体に所属していた場合に，
-本システムによって可視化された，
-協働で行われたタスクの様子を図\ref{cop-map-task}に示す．
-
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=0.5\textwidth]{img/cop-map-task.eps}
-  \caption{本システムによって可視化された協働で行われたタスク}
-  \label{cop-map-task}
-\end{figure}
 
 また，タスクを行った回数の合計値によってノードの半径を変化させている．
 これにより，プロジェクトメンバが正統的周辺参加である可能性を観察することが可能である．
@@ -100,7 +90,7 @@ Trello上でのカードの移動履歴を利用することで，
 タスクを行った回数は少ないが，
 リソースへのアクセスが可能な状態だと考える事ができる．
 本システムによって，
-観察される正統的周辺参加である可能性のあるプロジェクトメンバを図\ref{cop-map-lpp}に示す．
+観察される正統的周辺参加の可能性があるプロジェクトメンバを図\ref{cop-map-lpp}に示す．
 
 \begin{figure}[h]
   \centering
@@ -158,13 +148,13 @@ Trello上でのカードの移動履歴を利用することで，
 そのノードに対応するユーザ名を確認することが可能である．
 これらのインタラクションにより，
 より詳細にプロジェクトメンバの関係性を観察することが可能である．
-インタラクションによって詳細情報を表示している様子を，
-図\ref{cop-map-detail}に示す．
+% インタラクションによって詳細情報を表示している様子を，
+% 図\ref{cop-map-detail}に示す．
 
 % TODO: 複数の画像をつなげる
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=0.5\textwidth]{img/cop-map-detail.eps}
-  \caption{インタラクションによって詳細情報を表示している様子}
-  \label{cop-map-detail}
-\end{figure}
+% \begin{figure}[h]
+%   \centering
+%   \includegraphics[width=0.5\textwidth]{img/cop-map-detail.eps}
+%   \caption{インタラクションによって詳細情報を表示している様子}
+%   \label{cop-map-detail}
+% \end{figure}
