図を減らしてみた

--- a/wiss/tex/system.tex
+++ b/wiss/tex/system.tex
@@ -127,16 +127,16 @@ Trello上でのカードの移動履歴を利用することで，
 正統的周辺参加であったメンバが中心に移動する様子や，
 異なる実践共同体間で布置が構築されていく様子を観察することができる．
 % 「布置が構築される」構築されるでいいの？
-本システムによって観察されるプロジェクトメンバの軌跡を，
-図\ref{cop-map-trajectory}に示す．
+% 本システムによって観察されるプロジェクトメンバの軌跡を，
+% 図\ref{cop-map-trajectory}に示す．
 
 % TODO: 複数の画像をつなげる
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=0.5\textwidth]{img/cop-map-trajectory.eps}
-  \caption{本システムによって観察されるプロジェクトメンバの軌跡}
-  \label{cop-map-trajectory}
-\end{figure}
+% \begin{figure}[h]
+%   \centering
+%   \includegraphics[width=0.5\textwidth]{img/cop-map-trajectory.eps}
+%   \caption{本システムによって観察されるプロジェクトメンバの軌跡}
+%   \label{cop-map-trajectory}
+% \end{figure}
 
 また，本システムではインタラクティブにデータを観察することが可能である．
 本システムで可能なインタラクションは，
