--- a/wiss/tex/system.tex
+++ b/wiss/tex/system.tex
@@ -64,7 +64,7 @@ Trello上でのカードの移動履歴を利用することで，
 プロジェクトメンバが協働でタスクを行った履歴をエッジとして，
 プロジェクトの状況をネットワーク構造によって表現した．
 これにより，複雑なメンバの関係性や，
-異なる実践共同体間の関係性を観察することを可能にした．
+異なる実践共同体間の関係性を観察することが可能である．
 本システムによって可視化したプロジェクトメンバの関係性を，
 図\ref{cop-map-graph}に示す．
 
@@ -101,7 +101,7 @@ Trello上でのカードの移動履歴を利用することで，
 
 さらに，プロジェクトメンバの所属先によってノードの色を変化させることで，
 異なる実践共同体に所属するプロジェクトメンバが，
-協働でタスクを行っている様子を観察することを可能にしている．
+協働でタスクを行っている様子を観察するが可能である．
 これにより，異なる色のノードがエッジでつながっている様子から，
 布置を観察することができる．
 本システムによって観察される布置の例を，
@@ -120,7 +120,7 @@ Trello上でのカードの移動履歴を利用することで，
 
 本システムでは以上のネットワーク構造を，
 プロジェクトの時系列順にアニメーションで表示することができる．
-これにより，プロジェクトメンバの関係性の変化を観察することを可能である．
+これにより，プロジェクトメンバの関係性の変化を観察することが可能である．
 ノードの動きから，進行状況によって変化していく，
 プロジェクトメンバの軌跡を観察することができる．
 これにより，プロジェクトを振り返った際に，
