実践共同体の図の社会言語学的にを状況論的学習理論に変更

--- a/wiss/wiss_template.tex
+++ b/wiss/wiss_template.tex
@@ -256,6 +256,10 @@ PBL授業では，アプリの実装が完了した後で，
 %     「正統的周辺参加」をTrelloの カードの移動，プロジェクトのタスクがどの共同体に属しいてるかをTrelloのラベル機能を用 いて表す.
 % \end{enumerate}
 
+\section{関連研究について}
+\label{preResearch}
+\input{tex/preResearch}
+
 \section{実践共同体の可視化システムについて}
 \label{system}
 \input{tex/system}
