--- a/wiss/tex/system.tex
+++ b/wiss/tex/system.tex
@@ -34,7 +34,7 @@ Trello上でのカードの移動履歴を利用することで，
 % 従来の概念図と，本システムによる可視化の比較
 % MEMO: N個のベン図は表現可能
 % https://nunuki.hatenablog.com/entry/2017/12/31/175302
-社会言語学において，
+状況論的学習理論において，
 実践共同体とメンバの関係性は，
 図\ref{cop}と図\ref{overlap}で示したように，
 領域と要素のようなかたちで表現されてきた．
