--- a/wiss/tex/system.tex
+++ b/wiss/tex/system.tex
@@ -27,9 +27,9 @@ Trelloは，タスクの情報をカード，
 また，Trelloでは，カードに複数人の作業担当者を設定することが可能である．
 そこで，本システムでは，
 同じカードに割り振られた作業担当者は，
-協働でタスクを行ったという前提で，
+協力してタスクを行ったという前提で，
 Trello上でのカードの移動履歴を利用することで，
-プロジェクトメンバが協働で作業を行っている様子を可視化した．
+プロジェクトメンバの関係性を可視化した．
 
 % 従来の概念図と，本システムによる可視化の比較
 % MEMO: N個のベン図は表現可能
@@ -61,7 +61,7 @@ Trello上でのカードの移動履歴を利用することで，
 閉曲線が複雑化してしまう可能性が考えられる．
 そこで，本研究では，
 プロジェクトメンバをノード，
-プロジェクトメンバが協働でタスクを行った履歴をエッジとして，
+プロジェクトメンバが協力してタスクを行った履歴をエッジとして，
 プロジェクトの状況をネットワーク構造によって表現した．
 これにより，複雑なメンバの関係性や，
 異なる実践共同体間の関係性を観察することが可能である．
@@ -76,11 +76,9 @@ Trello上でのカードの移動履歴を利用することで，
 \end{figure}
 
 本システムでは，ノードのレイアウト手法として，力学モデルを採用している．
-また，協働でタスクを行った回数にが多いほど，
-エッジのバネ定数も高くなるようにすることで，
-多くのタスクを協働で行うほど，
-ノード間の距離は近くに配置される．
-これにより，頻繁に協働でタスクを行っているプロジェクトメンバを確認することができる．
+また，協力してタスクを行った回数によってエッジのバネ定数を変化させることで，
+多くのタスクを協力して行ったノードは近くに配置されるようになっている．
+これにより，頻繁に協力してタスクを行っているプロジェクトメンバを確認することができる．
 
 また，タスクを行った回数の合計値によってノードの半径を変化させている．
 これにより，プロジェクトメンバが正統的周辺参加である可能性を観察することが可能である．
