サッチマンの苦悩修正，関連研究少し加筆

--- a/wiss/wiss_template.tex
+++ b/wiss/wiss_template.tex
@@ -101,7 +101,7 @@ CSCW(Computer Supported Cooperative Work)\cite{cscwDefin}の観点から
 その課題に取り組むために有用であると思われる実践共同体の概念について考察を行う．
 
 
-\subsection{CSCWとサッチマンの苦悩について}
+\subsection{CSCWとサッチマンの分野横断研究に関する課題について}
 CSCWの発展はエスノメソドロジーに依拠したL.サッチマンの影響を大きく受けている．
 サッチマンは人々が社会生活を営むために用いる「やり方」を分析することを目的をする
 エスノメソドロジー\cite{ethnomethodology}の手法により，
