--- a/wiss/tex/preResearch.tex
+++ b/wiss/tex/preResearch.tex
@@ -1,3 +1,29 @@
 
 
 本章では関連研究として，アプリケーション開発における異なる実践共同体の参加の過程を可視化するシステム研究について，Trello APIを使用したアジャイル開発におけるチームメンバーの技術的なタスクに関連する感情の情報を可視化するシステムと，オンライン上の実践共同体をD3.jsを用いて可視化したシステム，それぞれ本研究との差異を述べ，新規性を示す.
+
+チームメンバーをマネジメントする観点から，
+可視化手法を用いた研究は多く存在する．
+%研究の概要
+%研究の手法的なもの
+%先行研究との差異
+
+本章では関連研究として，アプリケーション開発における
+異なる実践共同体の参加の過程を可視化するシステム研究について，
+Trello APIを使用したアジャイル開発におけるチームメンバーの
+技術的なタスクに関連する感情の情報を可視化するシステムと，
+オンライン上の実践共同体をD3.jsを用いて可視化したシステム，
+それぞれ本研究との差異を述べ，新規性を示す.
+
+\subsection{Trello APIを用いたアジャイル支援システム}
+Emotimonitorはチームメンバが自分の感情をTrelloのカードに
+絵文字で表現することを可能にした上で，これらを分析し，統計データを提供するものである．
+上記の機能により，アジャイル開発におけるタスクに関する
+メンバの感情状態を認識できることにより，
+マネージャーがチームメンバの感情的な健康状態を評価し、
+チームメンバーが自分の感情を振り返ることを支援することが目的としてある．
+Emotimonitorは，Trelloのカードに絵文字という感情表現の機能を
+拡張することによりあるチームメンバの管理を支援しているが，
+本研究では実践共同体の概念を用いることにより，
+異なる専門性や共同体に所属するチームメンバの関係性から
+プロジェクトの実践を支援することが可能となる．　　　
