--- a/wiss/tex/preResearch.tex
+++ b/wiss/tex/preResearch.tex
@@ -1,7 +1,5 @@
 
 
-本章では関連研究として，アプリケーション開発における異なる実践共同体の参加の過程を可視化するシステム研究について，Trello APIを使用したアジャイル開発におけるチームメンバーの技術的なタスクに関連する感情の情報を可視化するシステムと，オンライン上の実践共同体をD3.jsを用いて可視化したシステム，それぞれ本研究との差異を述べ，新規性を示す.
-
 チームメンバーをマネジメントする観点から，
 可視化手法を用いた研究は多く存在する．
 %研究の概要
@@ -23,7 +21,13 @@ Emotimonitorはチームメンバが自分の感情をTrelloのカードに
 マネージャーがチームメンバの感情的な健康状態を評価し、
 チームメンバーが自分の感情を振り返ることを支援することが目的としてある．
 Emotimonitorは，Trelloのカードに絵文字という感情表現の機能を
-拡張することによりあるチームメンバの管理を支援しているが，
-本研究では実践共同体の概念を用いることにより，
-異なる専門性や共同体に所属するチームメンバの関係性から
-プロジェクトの実践を支援することが可能となる．　　　
+拡張することによりあるチームメンバの内面を可視化しプロジェクトの管理を支援しているが，
+本研究ではTrello APIを用いている点でEmotimonitorと関連しているが
+異なる点として実践共同体の概念を用いることにより，
+異なる専門性や共同体に所属するチームメンバ間の関係性から
+プロジェクトの実践を支援することを目的としている．　　　
+
+\subsection{オンライン上の実践共同体の可視化}
+YUBOらは，急速に変化するUX(user experience)デザインのスキルが，オンライン上の実践共同体でどのように学習されているかを実践共同体の概念から分析を行っている．分析したデータを用いて，D3.jsを使用して，オンライン上の実践共同体のメンバ同士のインタラクションをネットワークとして可視化している．
+
+YUBOらの研究と本研究は，実践共同体の概念を用いて，実践共同体のメンバのやり取りをD3.jsで可視化しているということは共通している．しかし，本研究は共通の目的を共有している実践共同体のみを分析しているのではなく，異なる目的をもつ複数の実践共同体のやり取りを含めて分析している点がYUBOらの研究とは異なっている．
