関連研究と参考文献更新

--- a/wiss/sample.bib
+++ b/wiss/sample.bib
@@ -107,6 +107,25 @@
   publisher={凡人社},
   year={2010},
 }
+
+@article{Emotimonitor,
+  author = {Mohammed-Amr Abd El-Migid and Damon Cai and T. Niven and Jeffrey Vo and Kashumi Madampe and J. Grundy and Rashina Hoda},
+  title = {Emotimonitor: A Trello Power-Up to Capture Emotions of Agile Teams},
+  jurnal = {ArXiv},
+  volume = {abs/2105.01952},
+  year = {2021},
+}
+
+@article{D3jsOfCop,
+  author = {Kou, Yubo and Gray, Colin M. and Toombs, Austin L. and Adams, Robin S.},
+  title = {Understanding Social Roles in an Online Community of Volatile Practice: A Study of User Experience Practitioners on Reddit},
+  jurnal = {Trans. Soc. Comput.},
+  volume = {1},
+  number = {4},
+  pages = {22},
+  year = {2018},
+}
+
 @misc{trello,
   author  = {Atlassian},
   title   = {Trello},
